
2007-01-20 Neil J. Patel <njpatel@gmail.com>

  * avant-window-navigator - Initial Import