@@ -1,6 +1,6 @@
 @%:@! /bin/sh
 @%:@ Guess values for system-dependent variables and create Makefiles.
-@%:@ Generated by GNU Autoconf 2.59 for avant-window-navigator 0.1.0.
+@%:@ Generated by GNU Autoconf 2.59 for avant-window-navigator 0.1.1.
 @%:@ 
 @%:@ Copyright (C) 2003 Free Software Foundation, Inc.
 @%:@ This configure script is free software; the Free Software Foundation
@@ -421,8 +421,8 @@ SHELL=${CONFIG_SHELL-/bin/sh}
 # Identity of this package.
 PACKAGE_NAME='avant-window-navigator'
 PACKAGE_TARNAME='avant-window-navigator'
-PACKAGE_VERSION='0.1.0'
-PACKAGE_STRING='avant-window-navigator 0.1.0'
+PACKAGE_VERSION='0.1.1'
+PACKAGE_STRING='avant-window-navigator 0.1.1'
 PACKAGE_BUGREPORT=''
 
 ac_unique_file="."
@@ -964,7 +964,7 @@ if test "$ac_init_help" = "long"; then
   # Omit some internal or obsolete options to make the list less imposing.
   # This message is too long to be a string in the A/UX 3.1 sh.
   cat <<_ACEOF
-\`configure' configures avant-window-navigator 0.1.0 to adapt to many kinds of systems.
+\`configure' configures avant-window-navigator 0.1.1 to adapt to many kinds of systems.
 
 Usage: $0 [OPTION]... [VAR=VALUE]...
 
@@ -1030,7 +1030,7 @@ fi
 
 if test -n "$ac_init_help"; then
   case $ac_init_help in
-     short | recursive ) echo "Configuration of avant-window-navigator 0.1.0:";;
+     short | recursive ) echo "Configuration of avant-window-navigator 0.1.1:";;
    esac
   cat <<\_ACEOF
 
@@ -1177,7 +1177,7 @@ fi
 test -n "$ac_init_help" && exit 0
 if $ac_init_version; then
   cat <<\_ACEOF
-avant-window-navigator configure 0.1.0
+avant-window-navigator configure 0.1.1
 generated by GNU Autoconf 2.59
 
 Copyright (C) 2003 Free Software Foundation, Inc.
@@ -1191,7 +1191,7 @@ cat >&5 <<_ACEOF
 This file contains any messages produced by compilers while
 running configure, to aid debugging if configure makes a mistake.
 
-It was created by avant-window-navigator $as_me 0.1.0, which was
+It was created by avant-window-navigator $as_me 0.1.1, which was
 generated by GNU Autoconf 2.59.  Invocation command line was
 
   $ $0 $@
@@ -1839,7 +1839,7 @@ fi
 
 # Define the identity of the package.
  PACKAGE='avant-window-navigator'
- VERSION='0.1.0'
+ VERSION='0.1.1'
 
 
 cat >>confdefs.h <<_ACEOF
@@ -22654,7 +22654,7 @@ _ASBOX
 } >&5
 cat >&5 <<_CSEOF
 
-This file was extended by avant-window-navigator $as_me 0.1.0, which was
+This file was extended by avant-window-navigator $as_me 0.1.1, which was
 generated by GNU Autoconf 2.59.  Invocation command line was
 
   CONFIG_FILES    = $CONFIG_FILES
@@ -22717,7 +22717,7 @@ _ACEOF
 
 cat >>$CONFIG_STATUS <<_ACEOF
 ac_cs_version="\\
-avant-window-navigator config.status 0.1.0
+avant-window-navigator config.status 0.1.1
 configured by $0, generated by GNU Autoconf 2.59,
   with options \\"`echo "$ac_configure_args" | sed 's/[\\""\`\$]/\\\\&/g'`\\"
 
