@@ -1,4 +1,4 @@
-m4trace:configure.in:1: -1- AC_INIT([avant-window-navigator], [0.1.0], [])
+m4trace:configure.in:1: -1- AC_INIT([avant-window-navigator], [0.1.1], [])
 m4trace:configure.in:1: -1- m4_pattern_forbid([^_?A[CHUM]_])
 m4trace:configure.in:1: -1- m4_pattern_forbid([_AC_])
 m4trace:configure.in:1: -1- m4_pattern_forbid([^LIBOBJS$], [do not use LIBOBJS directly, use AC_LIBOBJ (see section `AC_LIBOBJ vs LIBOBJS'])
