@@ -155,9 +155,9 @@ OBJEXT = o
 PACKAGE = avant-window-navigator
 PACKAGE_BUGREPORT = 
 PACKAGE_NAME = avant-window-navigator
-PACKAGE_STRING = avant-window-navigator 0.1.0
+PACKAGE_STRING = avant-window-navigator 0.1.1
 PACKAGE_TARNAME = avant-window-navigator
-PACKAGE_VERSION = 0.1.0
+PACKAGE_VERSION = 0.1.1
 PATH_SEPARATOR = :
 PKG_CONFIG = /usr/bin/pkg-config
 POFILES =  en_GB.po
@@ -170,7 +170,7 @@ SET_MAKE =
 SHELL = /bin/sh
 STRIP = strip
 USE_NLS = yes
-VERSION = 0.1.0
+VERSION = 0.1.1
 XGETTEXT = /usr/bin/xgettext
 ac_ct_AR = ar
 ac_ct_CC = gcc
@@ -210,22 +210,18 @@ localstatedir = ${prefix}/var
 mandir = ${prefix}/man
 mkdir_p = mkdir -p --
 oldincludedir = /usr/include
-prefix = /usr
+prefix = /usr/local
 program_transform_name = s,x,x,
 sbindir = ${exec_prefix}/sbin
 sharedstatedir = ${prefix}/com
 slicelocaledir = ${prefix}/${DATADIRNAME}/locale
 sysconfdir = ${prefix}/etc
 target_alias = 
-glade_DATA = \
-	   window.glade
-
-gladedir = $(pkgdatadir)/
+glade_DATA = window.glade
+gladedir = $(pkgdatadir)
 desktopdir = $(datadir)/applications
 desktop_DATA = avant-preferences.desktop
-EXTRA_DIST = $(glade_DATA) \
-	avant-preferences.in.py $(desktop_DATA).in.in
-
+EXTRA_DIST = $(glade_DATA) avant-preferences.in.py $(desktop_DATA).in.in
 all: all-am
 
 .SUFFIXES:
