@@ -1,6 +1,5 @@
-glade_DATA =  \
-	   window.glade
-gladedir = $(pkgdatadir)/
+glade_DATA = window.glade
+gladedir = $(pkgdatadir)
 
 desktopdir   = $(datadir)/applications
 desktop_DATA = avant-preferences.desktop
@@ -14,8 +13,7 @@ install-exec-local:
 	sed -e "s|\@PKGDATADIR\@|$(pkgdatadir)|g" avant-preferences.in.py > avant-preferences.py
 	$(INSTALL) -m 755 avant-preferences.py $(DESTDIR)$(bindir)/avant-preferences
 
-EXTRA_DIST = $(glade_DATA) \
-	avant-preferences.in.py $(desktop_DATA).in.in
+EXTRA_DIST = $(glade_DATA) avant-preferences.in.py $(desktop_DATA).in.in
 
 clean:
 	rm -f *.pyo *.pyc *.bak *.gladep $(desktop_DATA) $(desktop_DATA).in
