@@ -62,16 +62,16 @@
 #define PACKAGE_NAME "avant-window-navigator"
 
 /* Define to the full name and version of this package. */
-#define PACKAGE_STRING "avant-window-navigator 0.1.0"
+#define PACKAGE_STRING "avant-window-navigator 0.1.1"
 
 /* Define to the one symbol short name of this package. */
 #define PACKAGE_TARNAME "avant-window-navigator"
 
 /* Define to the version of this package. */
-#define PACKAGE_VERSION "0.1.0"
+#define PACKAGE_VERSION "0.1.1"
 
 /* Define to 1 if you have the ANSI C header files. */
 #define STDC_HEADERS 1
 
 /* Version number of package */
-#define VERSION "0.1.0"
+#define VERSION "0.1.1"
