@@ -1,10 +1,10 @@
 This file contains any messages produced by compilers while
 running configure, to aid debugging if configure makes a mistake.
 
-It was created by avant-window-navigator configure 0.1.0, which was
+It was created by avant-window-navigator configure 0.1.1, which was
 generated by GNU Autoconf 2.59.  Invocation command line was
 
-  $ ./configure --enable-maintainer-mode --prefix=/usr --no-create --no-recursion
+  $ ./configure --enable-maintainer-mode
 
 ## --------- ##
 ## Platform. ##
@@ -191,11 +191,11 @@ configure: failed program was:
 | 
 | #define PACKAGE_NAME "avant-window-navigator"
 | #define PACKAGE_TARNAME "avant-window-navigator"
-| #define PACKAGE_VERSION "0.1.0"
-| #define PACKAGE_STRING "avant-window-navigator 0.1.0"
+| #define PACKAGE_VERSION "0.1.1"
+| #define PACKAGE_STRING "avant-window-navigator 0.1.1"
 | #define PACKAGE_BUGREPORT ""
 | #define PACKAGE "avant-window-navigator"
-| #define VERSION "0.1.0"
+| #define VERSION "0.1.1"
 | /* end confdefs.h.  */
 | #include <ac_nonexistent.h>
 configure:4273: result: gcc -E
@@ -209,11 +209,11 @@ configure: failed program was:
 | 
 | #define PACKAGE_NAME "avant-window-navigator"
 | #define PACKAGE_TARNAME "avant-window-navigator"
-| #define PACKAGE_VERSION "0.1.0"
-| #define PACKAGE_STRING "avant-window-navigator 0.1.0"
+| #define PACKAGE_VERSION "0.1.1"
+| #define PACKAGE_STRING "avant-window-navigator 0.1.1"
 | #define PACKAGE_BUGREPORT ""
 | #define PACKAGE "avant-window-navigator"
-| #define VERSION "0.1.0"
+| #define VERSION "0.1.1"
 | /* end confdefs.h.  */
 | #include <ac_nonexistent.h>
 configure:4385: checking for egrep
@@ -402,11 +402,11 @@ configure: failed program was:
 | 
 | #define PACKAGE_NAME "avant-window-navigator"
 | #define PACKAGE_TARNAME "avant-window-navigator"
-| #define PACKAGE_VERSION "0.1.0"
-| #define PACKAGE_STRING "avant-window-navigator 0.1.0"
+| #define PACKAGE_VERSION "0.1.1"
+| #define PACKAGE_STRING "avant-window-navigator 0.1.1"
 | #define PACKAGE_BUGREPORT ""
 | #define PACKAGE "avant-window-navigator"
-| #define VERSION "0.1.0"
+| #define VERSION "0.1.1"
 | #define STDC_HEADERS 1
 | #define HAVE_SYS_TYPES_H 1
 | #define HAVE_SYS_STAT_H 1
@@ -454,11 +454,11 @@ configure: failed program was:
 | 
 | #define PACKAGE_NAME "avant-window-navigator"
 | #define PACKAGE_TARNAME "avant-window-navigator"
-| #define PACKAGE_VERSION "0.1.0"
-| #define PACKAGE_STRING "avant-window-navigator 0.1.0"
+| #define PACKAGE_VERSION "0.1.1"
+| #define PACKAGE_STRING "avant-window-navigator 0.1.1"
 | #define PACKAGE_BUGREPORT ""
 | #define PACKAGE "avant-window-navigator"
-| #define VERSION "0.1.0"
+| #define VERSION "0.1.1"
 | #define STDC_HEADERS 1
 | #define HAVE_SYS_TYPES_H 1
 | #define HAVE_SYS_STAT_H 1
@@ -486,11 +486,11 @@ configure: failed program was:
 | 
 | #define PACKAGE_NAME "avant-window-navigator"
 | #define PACKAGE_TARNAME "avant-window-navigator"
-| #define PACKAGE_VERSION "0.1.0"
-| #define PACKAGE_STRING "avant-window-navigator 0.1.0"
+| #define PACKAGE_VERSION "0.1.1"
+| #define PACKAGE_STRING "avant-window-navigator 0.1.1"
 | #define PACKAGE_BUGREPORT ""
 | #define PACKAGE "avant-window-navigator"
-| #define VERSION "0.1.0"
+| #define VERSION "0.1.1"
 | #define STDC_HEADERS 1
 | #define HAVE_SYS_TYPES_H 1
 | #define HAVE_SYS_STAT_H 1
@@ -817,6 +817,34 @@ configure:22207: result: Using config source xml:merged:/etc/gconf/gconf.xml.def
 configure:22222: result: Using $(sysconfdir)/gconf/schemas as install directory for schema files
 configure:22390: creating ./config.status
 
+## ---------------------- ##
+## Running config.status. ##
+## ---------------------- ##
+
+This file was extended by avant-window-navigator config.status 0.1.1, which was
+generated by GNU Autoconf 2.59.  Invocation command line was
+
+  CONFIG_FILES    = 
+  CONFIG_HEADERS  = 
+  CONFIG_LINKS    = 
+  CONFIG_COMMANDS = 
+  $ ./config.status 
+
+on Fedora
+
+config.status:791: creating Makefile
+config.status:791: creating avant-preferences/Makefile
+config.status:791: creating src/Makefile
+config.status:791: creating data/Makefile
+config.status:791: creating data/active/Makefile
+config.status:791: creating po/Makefile.in
+config.status:895: creating config.h
+config.status:1017: config.h is unchanged
+config.status:1197: executing depfiles commands
+config.status:1197: executing intltool commands
+config.status:1197: executing default-1 commands
+config.status:1197: executing po/stamp-it commands
+
 ## ---------------- ##
 ## Cache variables. ##
 ## ---------------- ##
@@ -1042,9 +1070,9 @@ OBJEXT='o'
 PACKAGE='avant-window-navigator'
 PACKAGE_BUGREPORT=''
 PACKAGE_NAME='avant-window-navigator'
-PACKAGE_STRING='avant-window-navigator 0.1.0'
+PACKAGE_STRING='avant-window-navigator 0.1.1'
 PACKAGE_TARNAME='avant-window-navigator'
-PACKAGE_VERSION='0.1.0'
+PACKAGE_VERSION='0.1.1'
 PATH_SEPARATOR=':'
 PKG_CONFIG='/usr/bin/pkg-config'
 POFILES=' en_GB.po'
@@ -1057,7 +1085,7 @@ SET_MAKE=''
 SHELL='/bin/sh'
 STRIP='strip'
 USE_NLS='yes'
-VERSION='0.1.0'
+VERSION='0.1.1'
 XGETTEXT='/usr/bin/xgettext'
 ac_ct_AR='ar'
 ac_ct_CC='gcc'
@@ -1097,7 +1125,7 @@ localstatedir='${prefix}/var'
 mandir='${prefix}/man'
 mkdir_p='mkdir -p --'
 oldincludedir='/usr/include'
-prefix='/usr'
+prefix='/usr/local'
 program_transform_name='s,x,x,'
 sbindir='${exec_prefix}/sbin'
 sharedstatedir='${prefix}/com'
@@ -1129,11 +1157,11 @@ target_alias=''
 #define PACKAGE "avant-window-navigator"
 #define PACKAGE_BUGREPORT ""
 #define PACKAGE_NAME "avant-window-navigator"
-#define PACKAGE_STRING "avant-window-navigator 0.1.0"
+#define PACKAGE_STRING "avant-window-navigator 0.1.1"
 #define PACKAGE_TARNAME "avant-window-navigator"
-#define PACKAGE_VERSION "0.1.0"
+#define PACKAGE_VERSION "0.1.1"
 #define STDC_HEADERS 1
-#define VERSION "0.1.0"
+#define VERSION "0.1.1"
 #endif
 #ifdef __cplusplus
 extern "C" void std::exit (int) throw (); using std::exit;
@@ -1144,69 +1172,7 @@ configure: exit 0
 ## Running config.status. ##
 ## ---------------------- ##
 
-This file was extended by avant-window-navigator config.status 0.1.0, which was
-generated by GNU Autoconf 2.59.  Invocation command line was
-
-  CONFIG_FILES    = 
-  CONFIG_HEADERS  = 
-  CONFIG_LINKS    = 
-  CONFIG_COMMANDS = 
-  $ ./config.status 
-
-on Fedora
-
-config.status:791: creating Makefile
-config.status:791: creating avant-preferences/Makefile
-config.status:791: creating src/Makefile
-config.status:791: creating data/Makefile
-config.status:791: creating data/active/Makefile
-config.status:791: creating po/Makefile.in
-config.status:895: creating config.h
-config.status:1017: config.h is unchanged
-config.status:1197: executing depfiles commands
-config.status:1197: executing intltool commands
-config.status:1197: executing default-1 commands
-config.status:1197: executing po/stamp-it commands
-
-## ---------------------- ##
-## Running config.status. ##
-## ---------------------- ##
-
-This file was extended by avant-window-navigator config.status 0.1.0, which was
-generated by GNU Autoconf 2.59.  Invocation command line was
-
-  CONFIG_FILES    = 
-  CONFIG_HEADERS  = 
-  CONFIG_LINKS    = 
-  CONFIG_COMMANDS = 
-  $ ./config.status avant-preferences/Makefile
-
-on Fedora
-
-config.status:791: creating avant-preferences/Makefile
-
-## ---------------------- ##
-## Running config.status. ##
-## ---------------------- ##
-
-This file was extended by avant-window-navigator config.status 0.1.0, which was
-generated by GNU Autoconf 2.59.  Invocation command line was
-
-  CONFIG_FILES    = 
-  CONFIG_HEADERS  = 
-  CONFIG_LINKS    = 
-  CONFIG_COMMANDS = 
-  $ ./config.status data/Makefile
-
-on Fedora
-
-config.status:791: creating data/Makefile
-
-## ---------------------- ##
-## Running config.status. ##
-## ---------------------- ##
-
-This file was extended by avant-window-navigator config.status 0.1.0, which was
+This file was extended by avant-window-navigator config.status 0.1.1, which was
 generated by GNU Autoconf 2.59.  Invocation command line was
 
   CONFIG_FILES    = 
