@@ -259,7 +259,7 @@ _ASBOX
 } >&5
 cat >&5 <<_CSEOF
 
-This file was extended by avant-window-navigator $as_me 0.1.0, which was
+This file was extended by avant-window-navigator $as_me 0.1.1, which was
 generated by GNU Autoconf 2.59.  Invocation command line was
 
   CONFIG_FILES    = $CONFIG_FILES
@@ -302,9 +302,9 @@ $config_commands
 
 Report bugs to <bug-autoconf@gnu.org>."
 ac_cs_version="\
-avant-window-navigator config.status 0.1.0
+avant-window-navigator config.status 0.1.1
 configured by ./configure, generated by GNU Autoconf 2.59,
-  with options \"'--enable-maintainer-mode' '--prefix=/usr'\"
+  with options \"'--enable-maintainer-mode'\"
 
 Copyright (C) 2003 Free Software Foundation, Inc.
 This config.status script is free software; the Free Software Foundation
@@ -383,8 +383,8 @@ if $ac_cs_silent; then
 fi
 
 if $ac_cs_recheck; then
-  echo "running /bin/sh ./configure " '--enable-maintainer-mode' '--prefix=/usr' $ac_configure_extra_args " --no-create --no-recursion" >&6
-  exec /bin/sh ./configure '--enable-maintainer-mode' '--prefix=/usr' $ac_configure_extra_args --no-create --no-recursion
+  echo "running /bin/sh ./configure " '--enable-maintainer-mode' $ac_configure_extra_args " --no-create --no-recursion" >&6
+  exec /bin/sh ./configure '--enable-maintainer-mode' $ac_configure_extra_args --no-create --no-recursion
 fi
 
 #
@@ -393,7 +393,7 @@ fi
 
 AMDEP_TRUE="" ac_aux_dir="."
 INTLTOOL_PERL='/usr/bin/perl' ac_aux_dir='.'
-prefix="/usr" exec_prefix="${prefix}" INTLTOOL_LIBDIR="${exec_prefix}/lib"
+prefix="/usr/local" exec_prefix="${prefix}" INTLTOOL_LIBDIR="${exec_prefix}/lib"
 INTLTOOL_EXTRACT='$(top_builddir)/intltool-extract' INTLTOOL_ICONV='/usr/bin/iconv'
 INTLTOOL_MSGFMT='/usr/bin/msgfmt' INTLTOOL_MSGMERGE='/usr/bin/msgmerge'
 INTLTOOL_XGETTEXT='/usr/bin/xgettext'
@@ -470,11 +470,11 @@ s,@SHELL@,/bin/sh,;t t
 s,@PATH_SEPARATOR@,:,;t t
 s,@PACKAGE_NAME@,avant-window-navigator,;t t
 s,@PACKAGE_TARNAME@,avant-window-navigator,;t t
-s,@PACKAGE_VERSION@,0.1.0,;t t
-s,@PACKAGE_STRING@,avant-window-navigator 0.1.0,;t t
+s,@PACKAGE_VERSION@,0.1.1,;t t
+s,@PACKAGE_STRING@,avant-window-navigator 0.1.1,;t t
 s,@PACKAGE_BUGREPORT@,,;t t
 s,@exec_prefix@,${prefix},;t t
-s,@prefix@,/usr,;t t
+s,@prefix@,/usr/local,;t t
 s,@program_transform_name@,s,x,x,,;t t
 s,@bindir@,${exec_prefix}/bin,;t t
 s,@sbindir@,${exec_prefix}/sbin,;t t
@@ -501,7 +501,7 @@ s,@INSTALL_SCRIPT@,${INSTALL},;t t
 s,@INSTALL_DATA@,${INSTALL} -m 644,;t t
 s,@CYGPATH_W@,echo,;t t
 s,@PACKAGE@,avant-window-navigator,;t t
-s,@VERSION@,0.1.0,;t t
+s,@VERSION@,0.1.1,;t t
 s,@ACLOCAL@,${SHELL} /home/njp/svn/avant-window-navigator/missing --run aclocal-1.9,;t t
 s,@AUTOCONF@,${SHELL} /home/njp/svn/avant-window-navigator/missing --run autoconf,;t t
 s,@AUTOMAKE@,${SHELL} /home/njp/svn/avant-window-navigator/missing --run automake-1.9,;t t
@@ -936,11 +936,11 @@ t clr
 : clr
 ${ac_dA}PACKAGE_NAME${ac_dB}PACKAGE_NAME${ac_dC}"avant-window-navigator"${ac_dD}
 ${ac_dA}PACKAGE_TARNAME${ac_dB}PACKAGE_TARNAME${ac_dC}"avant-window-navigator"${ac_dD}
-${ac_dA}PACKAGE_VERSION${ac_dB}PACKAGE_VERSION${ac_dC}"0.1.0"${ac_dD}
-${ac_dA}PACKAGE_STRING${ac_dB}PACKAGE_STRING${ac_dC}"avant-window-navigator 0.1.0"${ac_dD}
+${ac_dA}PACKAGE_VERSION${ac_dB}PACKAGE_VERSION${ac_dC}"0.1.1"${ac_dD}
+${ac_dA}PACKAGE_STRING${ac_dB}PACKAGE_STRING${ac_dC}"avant-window-navigator 0.1.1"${ac_dD}
 ${ac_dA}PACKAGE_BUGREPORT${ac_dB}PACKAGE_BUGREPORT${ac_dC}""${ac_dD}
 ${ac_dA}PACKAGE${ac_dB}PACKAGE${ac_dC}"avant-window-navigator"${ac_dD}
-${ac_dA}VERSION${ac_dB}VERSION${ac_dC}"0.1.0"${ac_dD}
+${ac_dA}VERSION${ac_dB}VERSION${ac_dC}"0.1.1"${ac_dD}
 ${ac_dA}STDC_HEADERS${ac_dB}STDC_HEADERS${ac_dC}1${ac_dD}
 ${ac_dA}HAVE_SYS_TYPES_H${ac_dB}HAVE_SYS_TYPES_H${ac_dC}1${ac_dD}
 ${ac_dA}HAVE_SYS_STAT_H${ac_dB}HAVE_SYS_STAT_H${ac_dC}1${ac_dD}
@@ -973,11 +973,11 @@ t clr
 : clr
 ${ac_uA}PACKAGE_NAME${ac_uB}PACKAGE_NAME${ac_uC}"avant-window-navigator"${ac_uD}
 ${ac_uA}PACKAGE_TARNAME${ac_uB}PACKAGE_TARNAME${ac_uC}"avant-window-navigator"${ac_uD}
-${ac_uA}PACKAGE_VERSION${ac_uB}PACKAGE_VERSION${ac_uC}"0.1.0"${ac_uD}
-${ac_uA}PACKAGE_STRING${ac_uB}PACKAGE_STRING${ac_uC}"avant-window-navigator 0.1.0"${ac_uD}
+${ac_uA}PACKAGE_VERSION${ac_uB}PACKAGE_VERSION${ac_uC}"0.1.1"${ac_uD}
+${ac_uA}PACKAGE_STRING${ac_uB}PACKAGE_STRING${ac_uC}"avant-window-navigator 0.1.1"${ac_uD}
 ${ac_uA}PACKAGE_BUGREPORT${ac_uB}PACKAGE_BUGREPORT${ac_uC}""${ac_uD}
 ${ac_uA}PACKAGE${ac_uB}PACKAGE${ac_uC}"avant-window-navigator"${ac_uD}
-${ac_uA}VERSION${ac_uB}VERSION${ac_uC}"0.1.0"${ac_uD}
+${ac_uA}VERSION${ac_uB}VERSION${ac_uC}"0.1.1"${ac_uD}
 ${ac_uA}STDC_HEADERS${ac_uB}STDC_HEADERS${ac_uC}1${ac_uD}
 ${ac_uA}HAVE_SYS_TYPES_H${ac_uB}HAVE_SYS_TYPES_H${ac_uC}1${ac_uD}
 ${ac_uA}HAVE_SYS_STAT_H${ac_uB}HAVE_SYS_STAT_H${ac_uC}1${ac_uD}
