@@ -1,4 +1,4 @@
-AC_INIT([avant-window-navigator], [0.1.0], [])
+AC_INIT([avant-window-navigator], [0.1.1], [])
 
 AC_CONFIG_SRCDIR([.])
 AC_CONFIG_HEADERS([config.h])
