@@ -1,3 +1,12 @@
+2007-01-28 Neil J. Patel <njpatel@gmail.com>
+
+  * avant-preferences/Makefile.am - Adjust extradist to include glade file
+  * awn-bar.c - Support for gtk+ < 2.10
+  * awn-window.c - Support got gtk+ < 2.10
+  
+2007-01-28 Neil J. Patel <njpatel@gmail.com>
+
+  * avant-window-navigator - Initial Release - 0.0.1
 
 2007-01-20 Neil J. Patel <njpatel@gmail.com>
 
